# TrabajoGrupal

./: CMakeLists.txt  main.cpp
include/: histogram.h  scan_blelloch.h  scan_hillis.h  test_runner.h  utils.h
src/: histogram.cpp  scan_blelloch.cpp  scan_hillis.cpp  test_runner.cpp  utils.cpp
